Fixed issue with task notes visibility and filter

--- a/src/base.css
+++ b/src/base.css
@@ -1,21 +1,25 @@
 html {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 *,
 *::before,
 *::after {
-    box-sizing: inherit;
+  box-sizing: inherit;
 }
 
 body {
-    margin: 0;
-    background-color: #fff;
-    color: #212112;
+  margin: 0;
+  background-color: #fff;
+  color: #212112;
 }
 
 img {
-    display: block;
-    min-width: 100%;
-    height: auto;
+  display: block;
+  min-width: 100%;
+  height: auto;
 }
+
+/* .Filter-input {
+  width: 600px;
+} */
